testdata/baselines/reference/submodule/compiler/unusedTypeParameterInLambda2.errors.txt
unusedTypeParameterInLambda2.ts(3,17): error TS6196: 'T' is declared but never used.


==== unusedTypeParameterInLambda2.ts (1 errors) ====
    class A {
        public f1() {
            return <T, X>() => {
                    ~
!!! error TS6196: 'T' is declared but never used.
                var a: X;
                a;
            }
        }
    }